--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "knex": "^3.1.0",
+    "mysql": "^2.18.1",
     "mysql2": "^3.9.7",
     "nodemon": "^3.1.0"
   }
