--- a/package.json
+++ b/package.json
@@ -4,16 +4,24 @@
   "description": "Teste tecnico Loop It",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon start ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Marcio Gabriel Caravalho dos Santos",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.19.2",
+    "express-basic-auth": "^1.2.1",
     "knex": "^3.1.0",
+    "md5": "^2.3.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.7",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
+    "validator": "^13.11.0"
   }
 }
